--- a/temp.css
+++ b/temp.css
@@ -6,6 +6,13 @@
   margin: auto;
   margin-top: 5%;
 }
+table{
+	border :1px solid black;
+}
+th, td {
+  padding: 5px;
+  text-align: left;
+}
 #back {
   font-weight: bold;
   font-size: 15px;
